# verify_string

./: Cargo.toml  LICENSE  README.md
invisible_generate/: Cargo.toml
invisible_generate/src/: generator.rs  main.rs
verify_string/: Cargo.toml  README.md
verify_string/src/: lib.rs  trim.rs  verifier.rs  verify_string.rs
verify_string/src/verifier/: length.rs  regex.rs  word.rs
verify_string/tests/: trim.rs  verify.rs
