[package]
name = "verify_string"
version = "0.1.2"
edition = "2021"
authors = ["poohpooher <poohpooher@gmail.com>"]
description = "A library for verifying strings."
license = "MIT"
repository = "https://github.com/poohpooher/verify_string"
documentation = "https://docs.rs/verify_string/latest/verify_string/"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib"]

[dependencies]
derive_builder = "0.20.0"
log = "0.4.21"
anyhow = "1.0.81"
dyn-clone = "1.0.17"
regex = "1.10.4"

[dev-dependencies]
rand = "0.8.5"
